# OctoPrint-MfaTotp

./: .pre-commit-config.yaml  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  issue_automation.yml
octoprint_mfa_totp/: __init__.py
octoprint_mfa_totp/static/js/: mfa_totp.js
octoprint_mfa_totp/translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/: README.txt  messages.pot
translations/de/LC_MESSAGES/: messages.po
