[build-system]
requires = [
    "setuptools>=68"
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-MfaTotp"
version = "1.0.0"
description = "Plugin to support TOTP based Two Factor Authentication in OctoPrint."
authors = [
    { name = "Gina Häußge", email = "gina@octoprint.org" },
]
requires-python = ">=3.7,<4"
dependencies = [
    "pyotp>=2.9.0,<3",
]
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
mfa_totp = "octoprint_mfa_totp"

[project.urls]
Homepage = "https://github.com/OctoPrint/OctoPrint-MfaTotp"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_mfa_totp",
    "octoprint_mfa_totp.*",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 90
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "W",
    "B9",
]
ignore = [
    "E203",
    "E231",
    "E265",
    "E266",
    "E402",
    "E501",
    "E731",
    "E741",
    "W605",
    "C901",
]
fixable = [
    "I",
    "C4",
    "E",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = [
    "octoprint_mfa_totp",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"
